license header updated